# brownie-metadata-database

./: .cursorrules  .dockerignore  .flake8  .pre-commit-config.yaml  AI_DEVELOPMENT_GUIDELINES.md  CHANGELOG.md  DEVELOPER_SETUP.md  Dockerfile  Dockerfile.metrics  Dockerfile.postgres  Makefile  PACKAGE_MAINTENANCE.md  README.md  agent.md  alembic.ini  coverage.xml  docker-compose.yml  env.example  gha error.yaml  grafana-alerts.yaml  grafana-dashboard-config.yaml  grafana-dashboard.json  main.py  mypy.ini  pg_hba.conf  prometheus-alerts.yaml  pyproject.toml  run_migration.py
.github/workflows/: integration-tests.yml  publish-package.yml
alembic/: env.py
alembic/versions/: d607e412e7b0_initial_migration.py
brownie_metadata_db/backup/: manager.py  scheduler.py
brownie_metadata_db/database/: connection.py
docs/: RUNBOOK-database-sharding.md  RUNBOOK-scaling-operations.md
k8s/: README.md  alerting.yaml  app.yaml  backup.yaml  configmap.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  patroni.yaml  pgbouncer.yaml  postgres-config.yaml  postgres-primary.yaml  postgres-replicas.yaml  redis.yaml  secrets.yaml
k8s/helm/: Chart.yaml  README.md  values.yaml
k8s/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
metrics_sidecar/: __init__.py  __main__.py  requirements-metrics.txt
monitoring/: BACKUP.md  DEVELOPER_QUICK_REFERENCE.md  README.md  prometheus.yml
monitoring/alerts/: business.yml  database.yml
monitoring/dashboards/: business-metrics.json  database-overview.json
runbooks/: README.md  RUNBOOK-database-migration.md  RUNBOOK-db-api-changes.md  RUNBOOK-disaster-recovery.md
scripts/: env.example  init-db.sql  package-manager.py  pg_hba.conf  postgres-entrypoint.sh  postgresql.conf  setup-dev-certs.sh  setup-postgres-ssl.sh
src/: __init__.py  certificates.py
src/app_logging/: __init__.py  config.py
src/backup/: __init__.py  api.py  cli.py  config.py  manager.py  providers.py  scheduler.py
src/certificates/: __init__.py  config.py  validation.py
src/database/: base.py  config.py  connection.py
src/database/models/: __init__.py  agent_config.py  config.py  incident.py  organization.py  stats.py  team.py  user.py
src/logging/: __init__.py  audit.py  config.py  performance.py  setup.py
src/metrics/: __init__.py  collector.py  config.py  setup.py
tests/: conftest.py  test_connection.py  test_docker_integration.py  test_integration.py  test_logging.py  test_metrics.py  test_metrics_sidecar.py  test_migration.py  test_migration_independent.py  test_models.py  test_ssl_connection.py
